# stack-graphs

./: .build  .gitattributes  .gitignore  .zenodo.json  AUTHORS  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  flake.nix  valgrind.supp
languages/tree-sitter-stack-graphs-java/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  run
languages/tree-sitter-stack-graphs-java/rust/: bin.rs  lib.rs  test.rs
languages/tree-sitter-stack-graphs-java/src/: stack-graphs.tsg
languages/tree-sitter-stack-graphs-java/test/: collection_import.java  enhanced_for_statement.java  for_statement.java  if_statement.java  labeled_statement.java  method_in_extended_class.java  method_overriding.java  method_parameter.java  switch_expression.java  try_with_resources_statement.java  variable_declaration.java  yield_statement.java
languages/tree-sitter-stack-graphs-java/test/decl/: annotation_type_body.java  annotation_type_declaration.java  class_extension.java  class_parameters.java  duplicate_type_identifier.java  enum.java  enum_switches.java  field_modifiers.java  formal_parameter_bracket_placement.java  import_statement.java  interface.java  method_arguments.java  method_return.java  record.java  static_initializer.java  super_variable_declaration.java  type_identifier.java
languages/tree-sitter-stack-graphs-java/test/expression/: array_access.java  array_creation.java  assignment.java  binary.java  cast.java  (+9 more)
languages/tree-sitter-stack-graphs-java/tests/: field_declaration.java  variable_declaration.java
languages/tree-sitter-stack-graphs-javascript/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  base_syntax.html  package.json  simple.html  test.html
languages/tree-sitter-stack-graphs-javascript/docs/: package-structure.md
languages/tree-sitter-stack-graphs-javascript/rust/: bin.rs  lib.rs  npm_package.rs  test.rs  util.rs
languages/tree-sitter-stack-graphs-javascript/src/: stack-graphs-conv.tsg  stack-graphs.tsg
languages/tree-sitter-stack-graphs-javascript/test/: base_syntax.js
languages/tree-sitter-stack-graphs-python/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  query
languages/tree-sitter-stack-graphs-python/rust/: bin.rs  lib.rs  test.rs
languages/tree-sitter-stack-graphs-python/src/: stack-graphs.scm  stack-graphs.tsg
languages/tree-sitter-stack-graphs-python/test/: aliased_imports.py  assignments.py  attributes.py  blocks.py  chained_functions.py  chained_methods.py.skip  class_members.py  decorators.py  exceptions.py  functions.py  imported_functions.py  imports.py  instance_members.py  lambdas.py  loops.py  many_definitions.py  nested_functions.py  not_a_method.py  pattern_matching.py  redundant_reexport.py  relative_imports.py  root_path.py  self.py  statement_bindings.py  superclasses.py  tuples.py  typed_splat_parameters.py  typed_splat_params.py
languages/tree-sitter-stack-graphs-ruby/: CHANGELOG.md  Cargo.toml  README.md  example.rb
languages/tree-sitter-stack-graphs-ruby/contrib/: match  parse  test
languages/tree-sitter-stack-graphs-ruby/rust/: bin.rs  lib.rs  test.rs
languages/tree-sitter-stack-graphs-ruby/src/: builtins.cfg  stack-graphs.tsg
languages/tree-sitter-stack-graphs-typescript/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  askama.toml  build.rs
languages/tree-sitter-stack-graphs-typescript/rust/: bin.rs  lib.rs  npm_package.rs  test.rs  tsconfig.rs  util.rs
languages/tree-sitter-stack-graphs-typescript/src/: builtins.cfg  builtins.ts  stack-graphs.tsg
languages/tree-sitter-stack-graphs-typescript/vscode/: .gitignore  package-lock.json  package.json  tsconfig.json
lsp-positions/: CHANGELOG.md  Cargo.toml  README.md
lsp-positions/src/: lib.rs  lua.rs
lsp-positions/tests/it/: lua.rs  main.rs
stack-graphs/: CHANGELOG.md  Cargo.toml  README.md  build.rs  cbindgen.toml  valgrind.supp
stack-graphs-java/: Cargo.toml  stack-graphs.tsg
stack-graphs-java/bindings/rust/: lib.rs
stack-graphs-java/test/: playground-parse.txt  playground.java
stack-graphs-java/tests/: defined_in_extended_class.java  multiple_classes.html  multiple_classes.java  playground.html  playground.java  variable_declaration.html  variable_declaration.java
stack-graphs/include/: stack-graphs.h
stack-graphs/src/: arena.rs  assert.rs  c.rs  cycles.rs  filtered_stack_graph.rs  graph.rs  json.rs  lib.rs  lua.rs  partial.rs  paths.rs  serde.rs  stats.rs  stitching.rs  storage.rs  utils.rs  visualization.css  visualization.html  visualization.js  visualization.rs
stack-graphs/src/serde/: filter.rs  graph.rs  mod.rs  partial.rs  stitching.rs
stack-graphs/src/visualization/: d3-dag.min.js  d3-dag.v0.10.0.min.js  visualization.css  visualization.html  visualization.js
stack-graphs/tests/it/: arena.rs  can_create_graph.rs  can_find_local_nodes.rs  can_find_node_partial_paths_in_database.rs  can_find_partial_paths_in_file.rs  can_find_root_partial_paths_in_database.rs  can_jump_to_definition.rs  can_jump_to_definition_with_forward_partial_path_stitching.rs  can_jump_to_definition_with_forward_path_stitching.rs  cycles.rs  graph.rs  json.rs  lua.rs  main.rs  partial.rs  paths.rs  serde.rs  stats.rs  stitching.rs  storage.rs  util.rs
tree-sitter-stack-graphs/: CHANGELOG.md  Cargo.toml  README.md
tree-sitter-stack-graphs/examples/: .gitignore  README.md  bootstrap  parse  run
tree-sitter-stack-graphs/examples/modules/: stack-graphs.tsg
tree-sitter-stack-graphs/examples/nested-scope/: stack-graphs.tsg
tree-sitter-stack-graphs/examples/sequential-definitions/: stack-graphs.tsg
tree-sitter-stack-graphs/npm/: .gitignore  README.md  cli.js  install.js  package-lock.json  package.json
tree-sitter-stack-graphs/src/: assert.rs  ci.rs  cli.rs  functions.rs  lib.rs  loader.rs  lua.rs  test.rs  util.rs
tree-sitter-stack-graphs/src/cli/: analyze.rs  clean.rs  database.rs  index.rs  init.rs  load.rs  lsp.rs  match.rs  parse.rs  query.rs  status.rs  test.rs  util.rs  visualize.rs
tree-sitter-stack-graphs/tests/it/: assert.rs  builder.rs  edges.rs  loader.rs  lua.rs  main.rs  nodes.rs  test.rs
(+611 files in other folders)
