[package]
name = "stack-graphs"
version = "0.1.0"
description = "Name binding for arbitrary programming languages"
homepage = "https://github.com/github/stack-graphs/"
repository = "https://github.com/github/stack-graphs/"
readme = "README.md"
license = "Apache-2.0"
authors = [
  "GitHub <opensource+stack-graphs@github.com>",
  "Douglas Creager <dcreager@dcreager.net>"
]
edition = "2018"

[lib]
# All of our tests are in the tests/it "integration" test executable.
test = false
