[package]
name = "stack-graphs"
version = "0.3.0"
description = "Name binding for arbitrary programming languages"
homepage = "https://github.com/github/stack-graphs/"
repository = "https://github.com/github/stack-graphs/"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = [
  "GitHub <opensource+stack-graphs@github.com>",
  "Douglas Creager <dcreager@dcreager.net>"
]
edition = "2018"

[features]
copious-debugging = []

[lib]
# All of our tests are in the tests/it "integration" test executable.
test = false

[dependencies]
controlled-option = "0.4"
either = "1.6"
fxhash = "0.2"
libc = "0.2"
smallvec = { version="1.6", features=["union"] }

[dev-dependencies]
itertools = "0.10"
maplit = "1.0"
