[package]
name = "lsp-positions"
version = "0.3.4"
description = "LSP-compatible character positions"
homepage = "https://github.com/github/stack-graphs/tree/main/lsp-positions"
repository = "https://github.com/github/stack-graphs/"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = [
  "GitHub <opensource+stack-graphs@github.com>",
  "Douglas Creager <dcreager@dcreager.net>"
]
edition = "2018"

[lib]
# All of our tests are in the tests/it "integration" test executable.
test = false

[features]
bincode = ["dep:bincode"]
tree-sitter = ["dep:tree-sitter"]

[dependencies]
memchr = "2.4"
tree-sitter = { version = "0.24", optional = true } # keep the same minor version as the tree-sitter
                                                    # dependency of tree-sitter-stack-graphs to prevent
                                                    # install problems
unicode-segmentation = { version = "1.8" }
serde = { version = "1", features = ["derive"], optional = true }
bincode = { version = "2.0.0-rc.3", optional = true }
