[package]
name = "stack-graphs"
version = "0.14.1"
description = "Name binding for arbitrary programming languages"
homepage = "https://github.com/github/stack-graphs/tree/main/stack-graphs"
repository = "https://github.com/github/stack-graphs/"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = [
  "GitHub <opensource+stack-graphs@github.com>",
  "Douglas Creager <dcreager@dcreager.net>"
]
edition = "2018"

[features]
bincode = ["dep:bincode", "lsp-positions/bincode"]
copious-debugging = []
serde = ["dep:serde", "serde_with", "lsp-positions/serde"]
storage = ["bincode", "rusqlite"]
visualization = ["serde", "serde_json"]

[lib]
# All of our tests are in the tests/it "integration" test executable.
test = false

[dependencies]
bincode = { version = "2.0.0-rc.3", optional = true }
bitvec = "1.0.1"
controlled-option = "0.4.1"
either = "1.6"
enumset = "1.1"
fxhash = "0.2"
itertools = "0.10.2"
libc = "0.2"
lsp-positions = { version = "0.3", path = "../lsp-positions" } # explicit version is required to be able to publish crate
rusqlite = { version = "0.28", optional = true, features = ["bundled", "functions"] }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
serde_with = { version = "3.1", optional = true }
smallvec = { version = "1.6", features = ["union"] }
thiserror = { version = "1.0" }

[dev-dependencies]
assert-json-diff = "2"
maplit = "1.0"
pretty_assertions = "0.7"
serde_json = { version = "1.0" }

[package.metadata.docs.rs]
all-features = true
