[package]
name = "tree-sitter-stack-graphs"
version = "0.0.0"
description = "Create stack graphs using tree-sitter parsers"
homepage = "https://github.com/github/stack-graphs/tree-sitter-stack-graphs"
repository = "https://github.com/github/stack-graphs/"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = [
  "GitHub <opensource+stack-graphs@github.com>",
  "Douglas Creager <dcreager@dcreager.net>"
]
edition = "2018"

[lib]
# All of our tests are in the tests/it "integration" test executable.
test = false

[dependencies]
controlled-option = ">=0.4"
lsp-positions = { version="0.1", path="../lsp-positions" }
stack-graphs = { version="0.4", path="../stack-graphs" }
thiserror = "1.0"
tree-sitter = ">= 0.19"
tree-sitter-graph = "0.3"

[dev-dependencies]
pretty_assertions = "0.7"
tree-sitter-python = "0.19.1"
