[package]
name = "tree-sitter-stack-graphs"
version = "0.2.0"
description = "Create stack graphs using tree-sitter parsers"
homepage = "https://github.com/github/stack-graphs/tree/main/tree-sitter-stack-graphs"
repository = "https://github.com/github/stack-graphs/"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = [
  "GitHub <opensource+stack-graphs@github.com>",
  "Douglas Creager <dcreager@dcreager.net>",
  "Hendrik van Antwerpen <hendrikvanantwerpen@github.com>",
]
edition = "2018"

[lib]
# All of our tests are in the tests/it "integration" test executable.
test = false

[[bin]]
name = "tree-sitter-stack-graphs"
required-features = ["cli"]

[features]
cli = ["clap", "colored", "env_logger", "stack-graphs/json", "tree-sitter-config", "walkdir"]

[dependencies]
anyhow = "1.0"
clap = { version = "3", optional = true, features=["derive"] }
colored = { version = "2.0", optional = true }
controlled-option = ">=0.4"
env_logger = { version = "0.9", optional = true }
itertools = "0.10"
lazy_static = "1.4"
log = "0.4"
lsp-positions = { version="0.3", path="../lsp-positions" }
regex = "1"
stack-graphs = { version="0.10", path="../stack-graphs" }
thiserror = "1.0"
tree-sitter = ">= 0.19"
tree-sitter-config = { version = "0.19", optional = true }
tree-sitter-graph = "0.6"
tree-sitter-loader = "0.20"
walkdir = { version = "2.3", optional = true }

[dev-dependencies]
pretty_assertions = "0.7"
tree-sitter-python = "0.19.1"
