[package]
name = "tree-sitter-stack-graphs"
version = "0.6.0"
description = "Create stack graphs using tree-sitter parsers"
homepage = "https://github.com/github/stack-graphs/tree/main/tree-sitter-stack-graphs"
repository = "https://github.com/github/stack-graphs/"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = [
  "GitHub <opensource+stack-graphs@github.com>",
  "Douglas Creager <dcreager@dcreager.net>",
  "Hendrik van Antwerpen <hendrikvanantwerpen@github.com>",
]
edition = "2018"

[lib]
# All of our tests are in the tests/it "integration" test executable.
test = false

[[bin]]
name = "tree-sitter-stack-graphs"
required-features = ["cli"]

[features]
cli = [
  "base64",
  "clap",
  "colored",
  "dirs",
  "dialoguer",
  "env_logger",
  "indoc",
  "pathdiff",
  "serde_json",
  "sha1",
  "stack-graphs/serde",
  "stack-graphs/storage",
  "stack-graphs/visualization",
  "time",
  "tree-sitter-config",
  "tree-sitter-graph/term-colors",
  "walkdir",
]
lsp = [
  "capture-it",
  "crossbeam-channel",
  "tokio",
  "tower-lsp",
]

[dependencies]
anyhow = "1.0"
base64 = { version = "0.21", optional = true }
capture-it = { version = "0.3", optional = true }
clap = { version = "3", optional = true, features=["derive"] }
colored = { version = "2.0", optional = true }
controlled-option = ">=0.4"
crossbeam-channel = { version = "0.5", optional = true }
dialoguer = { version = "0.10", optional = true }
dirs = { version = "5", optional=true }
env_logger = { version = "0.9", optional = true }
indoc = { version = "1.0", optional = true }
itertools = "0.10"
log = "0.4"
lsp-positions = { version="0.3", path="../lsp-positions" }
once_cell = "1"
pathdiff = { version = "0.2.1", optional = true }
regex = "1"
rust-ini = "0.18"
serde_json = { version="1.0", optional=true }
sha1 = { version="0.10", optional=true }
stack-graphs = { version="0.10", path="../stack-graphs" }
thiserror = "1.0"
time = { version = "0.3", optional = true }
tokio = { version = "1.26", optional = true, features = ["io-std", "rt", "rt-multi-thread"] }
tower-lsp = { version = "0.19", optional = true }
tree-sitter = ">= 0.19"
tree-sitter-config = { version = "0.19", optional = true }
tree-sitter-graph = "0.9.2"
tree-sitter-loader = "0.20"
walkdir = { version = "2.3", optional = true }

[dev-dependencies]
pretty_assertions = "0.7"
tree-sitter-python = "0.19.1"
