[package]
name = "tree-sitter-stack-graphs-java"
version = "0.3.0"
description = "Stack graphs for the Java programming language"

homepage = "https://github.com/github/stack-graphs/tree/main/languages/tree-sitter-stack-graphs-java"
repository = "https://github.com/github/stack-graphs"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"

authors = [
  "Beka Valentine <bekavalentine@github.com>",
  "Douglas Creager <dcreager@dcreager.net>",
  "GitHub <opensource+stack-graphs@github.com>",
  "Hendrik van Antwerpen <hendrikvanantwerpen@github.com>",
  "Nina Kaufman <rnkaufman@github.com>",
  "Rob Rix <robrix@github.com>",
]

keywords = ["tree-sitter", "stack-graphs", "java"]

[[bin]]
name = "tree-sitter-stack-graphs-java"
path = "rust/bin.rs"
required-features = ["cli"]

[lib]
path = "rust/lib.rs"
test = false

[[test]]
name = "test"
path = "rust/test.rs"
harness = false # need to provide own main function to handle running tests

[features]
cli = ["anyhow", "clap", "tree-sitter-stack-graphs/cli"]

[dependencies]
anyhow = { version = "1.0", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
tree-sitter-java = { version = "=0.20.2" }
tree-sitter-stack-graphs = { version = "0.8", path = "../../tree-sitter-stack-graphs" }

[dev-dependencies]
anyhow = { version = "1.0" }
tree-sitter-stack-graphs = { version = "0.8", path = "../../tree-sitter-stack-graphs", features = ["cli"] }
