[package]
name = "tree-sitter-stack-graphs-javascript"
version = "0.2.0"
description = "Stack graphs definition for JavaScript using tree-sitter-javascript"
readme = "README.md"
keywords = ["tree-sitter", "stack-graphs", "javascript"]
authors = ["Beka Valentine <bekavalentine@github.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[[bin]]
name = "tree-sitter-stack-graphs-javascript"
path = "rust/bin.rs"
required-features = ["cli"]

[lib]
path = "rust/lib.rs"
test = false

[[test]]
name = "test"
path = "rust/test.rs"
harness = false

[features]
cli = ["anyhow", "clap", "tree-sitter-stack-graphs/cli"]

[dependencies]
anyhow = { version = "1.0", optional = true }
clap = { version = "4", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stack-graphs = { version = "0.14", path = "../../stack-graphs" } # explicit version is required to be able to publish crate
tree-sitter-graph = "0.11.2"
tree-sitter-javascript = "=0.20.4"
tree-sitter-stack-graphs = { version = "0.9", path = "../../tree-sitter-stack-graphs" } # explicit version is required to be able to publish crate

[dev-dependencies]
anyhow = "1.0"
tree-sitter-stack-graphs = { path = "../../tree-sitter-stack-graphs", features = ["cli"] }
