[package]
name = "tree-sitter-stack-graphs-ruby"
version = "0.1.0"
description = "Stack graphs definition for Ruby using tree-sitter-ruby"
readme = "README.md"
keywords = ["tree-sitter", "stack-graphs", "ruby"]
authors = [
    "GitHub <opensource+stack-graphs@github.com>",
]
license = "MIT OR Apache-2.0"
edition = "2018"

[[bin]]
name = "tree-sitter-stack-graphs-ruby"
path = "rust/bin.rs"
required-features = ["cli", "storage", "visualization"]

[lib]
path = "rust/lib.rs"
test = false

[[test]]
name = "test"
path = "rust/test.rs"
harness = false

[features]
cli = ["anyhow", "clap", "tree-sitter-stack-graphs/cli"]
storage = ["rusqlite", "serde"]
visualization = ["serde", "serde_json"]

[dependencies]
anyhow = { version = "1.0", optional = true }
clap = { version = "4", optional = true }
rusqlite = { version = "0.28", optional=true, features = ["bundled", "functions"] }
serde = { version="1.0", optional=true, features = ["derive"] }
serde_json = { version="1.0", optional=true }
tree-sitter-stack-graphs = { version = "0.6.0", path = "../../tree-sitter-stack-graphs" }
tree-sitter-ruby = "0.20.0"

[dev-dependencies]
anyhow = "1.0"
tree-sitter-stack-graphs = { version = "0.6.0", path = "../../tree-sitter-stack-graphs", features = ["cli"] }
