[package]
name = "tree-sitter-stack-graphs-typescript"
version = "0.1.0"
description = "Stack graphs definition for TypeScript using tree-sitter-typescript"
readme = "README.md"
keywords = ["tree-sitter", "stack-graphs", "typescript"]
authors = ["Hendrik van Antwerpen <hendrikvanantwerpen@github.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[[bin]]
name = "tree-sitter-stack-graphs-typescript"
path = "rust/bin.rs"
required-features = ["cli"]

[lib]
path = "rust/lib.rs"
test = false

[[test]]
name = "test"
path = "rust/test.rs"
harness = false
required-features = ["tree-sitter-stack-graphs/cli"] # this should be *forced* for tests, but cargo does not support that

[features]
default = ["cli"] # as long as the required features for test cannot be forced, we enable cli by default, to make sure tests are always run
cli = ["anyhow", "clap", "tree-sitter-stack-graphs/cli"]

[dependencies]
anyhow = { version = "1.0", optional = true }
clap = { version = "3", optional = true }
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stack-graphs = { version = "0.10", path = "../../stack-graphs" }
tree-sitter-stack-graphs = { version = "0.6", path = "../../tree-sitter-stack-graphs" }
tree-sitter-typescript = { git = "https://github.com/tree-sitter/tree-sitter-typescript", rev="082da44a5263599186dadafd2c974c19f3a73d28" }
tsconfig = "0.1.0"
