[package]
name = "tree-sitter-stack-graphs-typescript"
version = "0.1.0"
description = "Stack graphs definition for TypeScript using tree-sitter-typescript"
readme = "README.md"
keywords = ["tree-sitter", "stack-graphs", "typescript"]
authors = ["Hendrik van Antwerpen <hendrikvanantwerpen@github.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[[bin]]
name = "tree-sitter-stack-graphs-typescript"
path = "rust/bin.rs"
required-features = ["cli"]

[lib]
path = "rust/lib.rs"
test = false

[[test]]
name = "test"
path = "rust/test.rs"
harness = false

[features]
cli = ["anyhow", "clap", "tree-sitter-stack-graphs/cli"]
lsp = ["tree-sitter-stack-graphs/lsp"]

[dependencies]
anyhow = { version = "1.0", optional = true }
clap = { version = "4", optional = true }
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stack-graphs = { version = ">=0.11, <=0.12", path = "../../stack-graphs" }
tree-sitter-stack-graphs = { version = "0.7", path = "../../tree-sitter-stack-graphs" }
tree-sitter-typescript = "=0.20.2"
tsconfig = "0.1.0"

[dev-dependencies]
anyhow = { version = "1.0" }
tree-sitter-stack-graphs = { version = "0.7", path = "../../tree-sitter-stack-graphs", features = ["cli"] }
